# huginn

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: cli.rs  error.rs  main.rs  runner.rs
src/analyzers/: mod.rs
src/analyzers/cis/: account_policies.rs  kernel.rs  mod.rs  network.rs  security_options.rs  services.rs  ssh.rs
src/collectors/: mod.rs  network.rs  scheduled_tasks.rs  security_policies.rs  services.rs  software.rs  system_info.rs  users.rs
src/models/: bloodhound.rs  finding.rs  mod.rs  report.rs  system_info.rs
src/output/: bloodhound.rs  html.rs  json.rs  mod.rs
src/platform/: mod.rs
src/platform/linux/: etc.rs  mod.rs  network.rs  proc.rs  security.rs  services.rs
src/platform/windows/: mod.rs  network.rs  registry.rs  services.rs  software.rs  tasks.rs  users.rs
templates/: report.css  report.html.jinja  report.js
